k8s/backend/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiap-backend-service
  namespace: fiap-backend
spec:
  type: LoadBalancer
  selector:
    app: fiap-backend
  ports:
    - name: http
      protocol: TCP
      port: 30150
      targetPort: http
